--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "joi": "^17.8.3",
     "mongoose": "^7.0.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/nodemailer": "^6.4.7",
     "chalk": "^4.1.2",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
