--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.7",
+    "@types/validator": "^13.7.14",
     "chalk": "^4.1.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "validator": "^13.9.0"
   }
 }
