--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "author": "\"Ismail Tijani\"",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemailer": "^6.4.7",
     "@types/validator": "^13.7.14",
     "chalk": "^4.1.2",
