--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.0"
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
+    "@types/sharp": "^0.31.1",
     "@types/validator": "^13.7.14",
     "chalk": "^4.1.2",
     "nodemailer": "^6.9.1",
