--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "validator": "^13.9.0"
+    "typescript": "^4.9.5"
   }
 }
