--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "cashapp",
+  "name": "kimbali",
   "version": "1.0.0",
   "description": "\"Money lending Application\"",
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/server.js",
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "eslint:fix": "eslint --fix"
   },
   "author": "\"Ismail Tijani\"",
   "license": "ISC",
