--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "index.d.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "test/**/*.ts"],
   "ts-node": { "files": true }
 }
