--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "kimbali",
   "version": "1.0.0",
-  "description": "\"Money lending Application\"",
+  "description": "\"Financial service Application\"",
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/server.js",
+    "start": "tsc && node ./dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "eslint:fix": "eslint --fix"
+    "lint": "eslint . --config .eslintrc.json",
+    "eslint:fix": "eslint . --fix --config .eslintrc.json"
   },
   "author": "\"Ismail Tijani\"",
   "license": "ISC",
@@ -33,10 +34,15 @@
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
     "@types/sharp": "^0.31.1",
-    "@types/validator": "^13.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "chalk": "^4.1.2",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
+    "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
