--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,15 @@
     "node": true,
     "es2021": true
   },
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "prettier"],
-  "rules": { "prettier/prettier": ["error"] }
+  "rules": {
+    "@typescript-eslint/no-namespace": "off"
+    // "prettier/prettier": ["error"]
+  }
 }
