--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node ./dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "lint": "eslint . --config .eslintrc.json",
-    "eslint:fix": "eslint . --fix --config .eslintrc.json"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --fix"
   },
   "author": "\"Ismail Tijani\"",
   "license": "ISC",
@@ -39,7 +39,11 @@
     "chalk": "^4.1.2",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.7",
