--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "\"Financial service Application\"",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node ./dist/server.js",
+    "build": "tsc",
+    "start": "node ./dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --fix"
