--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "tsc",
     "start": "node ./dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write .",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "author": "\"Ismail Tijani\"",
   "license": "ISC",
